# Programacion_estructurada_oscar_zayas

./: CMakeLists.txt  README.md  main.c
1/: estudiantes.c
2/: uniones.c
3/: copiaestructuras.c
4/: tiposestructura.c
5/: funcionesyestructuras.c
