cmake_minimum_required(VERSION 3.29)
project(Programacion_estructurada)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programacion_estructurada
        1/estudiantes.c
    README.md
        2/uniones.c
        3/copiaestructuras.c
        4/tiposestructura.c
        5/funcionesyestructuras.c
        main.c)
